--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,35 @@
-h1 {
-  color: red;
+body {
+  margin: 0px;
+}
+
+header {
+  background-color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+header img {
+  height: 200px;
+  padding: 20px;
+}
+
+header ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+}
+
+header ul li {
+  margin: 20px;
+}
+
+header ul li a {
+  color: white;
 }
 /*# sourceMappingURL=styles.css.map */
