--- a/styles.scss
+++ b/styles.scss
@@ -1,3 +1,22 @@
-h1{
-    color:red;
+body{
+    margin: 0px;
+}
+header{
+    background-color: black;
+    display: flex;
+    flex-direction: row;
+    img{
+        height: 200px;
+        padding: 20px;
+    }
+    ul{
+        display: flex;
+        list-style: none;
+        li{
+            margin:20px;
+            a{
+                color: white;
+            }
+        }
+    }
 }
