--- a/styles.scss
+++ b/styles.scss
@@ -83,4 +83,15 @@ body{
         text-align: center;
         color: white;
     }
+    .social-media{
+        display: flex;
+        justify-content: center;
+        a{
+            margin-bottom: 30px;
+            img{
+                width: 30px;
+            }
+        } 
+    }
+        
 }
